# IMUFHE

./: CMakeLists.txt  README.md
include/: main.hpp  parseCSV.hpp  transformation.hpp
src/: data.csv  main.cpp  parseCSV.cpp  transformation.cpp
